--- a/content/Systems/images.hbs
+++ b/content/Systems/images.hbs
@@ -33,11 +33,10 @@ page-category: "systems"
 		            <div class="secton__body">
 				        <!-- code -->
 
-				        <div class="rimg">
-					        <noscript class="rimg__noscript">
-					        	<img src="/images/my-image-small.jpg" alt="" class="rimg__img" />
-					        </noscript>
-				        </div>
+				        <img src="https://placehold.it/200x200" class="image" alt="" />
+				        <img src="https://placehold.it/200x200" class="image image--rounded" alt="" />
+				        <img src="https://placehold.it/200x200" class="image image--circle" alt="" />
+				        <img src="https://placehold.it/200x200" class="image image--bordered" alt="" />
 
 				        <!-- end of code -->
 			        </div>
@@ -53,8 +52,11 @@ page-category: "systems"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-
-			             </code></pre>
+&lt;img src="https://placehold.it/200x200" class="image" alt="" /&gt;
+&lt;img src="https://placehold.it/200x200" class="image image--rounded" alt="" /&gt;
+&lt;img src="https://placehold.it/200x200" class="image image--circle" alt="" /&gt;
+&lt;img src="https://placehold.it/200x200" class="image image--bordered" alt="" /&gt;
+			            </code></pre>
 		            </div>
 
 		        </section>
