--- a/assets/less/base_modules/image.less
+++ b/assets/less/base_modules/image.less
@@ -23,12 +23,12 @@
 }
 
 .image--circle {
-    ._border-radius (1000);
+	border-radius: 50%;
 }
 
 .image--bordered {
-	box-sizing: border-box;
     border: 4px solid @IMAGE-BorderColor;
+	._box-sizing (border-box);
 }
 
 } .image-styles();
