--- a/content/_layouts/example.hbs
+++ b/content/_layouts/example.hbs
@@ -28,6 +28,8 @@
     <!-- For everything else -->
     <!-- <link href="{{ assets }}/img/icons/favicon.png" rel="shortcut icon" type="image/png"/> -->
     <!-- <link href="{{ assets }}/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon"/> -->
+    
+    <script src="{{ assets }}/js/app/conf.js"></script>
 
     <!-- IE8 and below fallbacks -->
     <!--[if lt IE 9]>
