--- a/assets/less/base/helpers.less
+++ b/assets/less/base/helpers.less
@@ -45,6 +45,10 @@
     height: 0;
 }
 
+.no-select {
+    ._user-select();
+}
+
 // DISPLAY
 // ----------------------------------------------------
 
