--- a/assets/less/modules/_template.less
+++ b/assets/less/modules/_template.less
@@ -2,15 +2,18 @@
 // TEMPLATE
 // =======================================================================*/
 
-// COLOURS
+// VARIABLES
 // ----------------------------------------------------
 
 // BASE
 // ----------------------------------------------------
 
-.template {
+.block {
 
 }
+
+// VARIANTS
+// ----------------------------------------------------
 
 // MOBILE
 // ----------------------------------------------------
