--- a/assets/less/modules/list__navigation.less
+++ b/assets/less/modules/list__navigation.less
@@ -57,12 +57,9 @@
 @media only screen and (max-width: @MQ-Small) {
 
     .list__navigation {
-        .list__item {
-
-        }
-
         .list__link {
             text-align: center;
+            ._padding (10);
         }
     }
 
