--- a/content/Components/pagination.hbs
+++ b/content/Components/pagination.hbs
@@ -32,19 +32,27 @@ page-category: "components"
 
 		            <div class="secton__body">
 				        <!-- code -->
+
 							<div class="pagination">
 
-								<a href="#" class="link link--pagination"><span class="hidden-text" aria-hidden="true">Previous</span><i class="icon icon--left216"></i></a>
+								<a href="#" class="pagination__control pagination__control--first"><span class="hidden-text" aria-hidden="true">First</span><i class="icon icon--previous14"></i></a>
+								<a href="#" class="pagination__control pagination__control--previous"><span class="hidden-text" aria-hidden="true">Previous</span><i class="icon icon--left216"></i></a>
 							        
-						        <ul class="list list--pagination">
-				                    <li class="list__item"><a class="list__link current" href="#">1</a></li>
-				                    <li class="list__item"><a class="list__link" href="#">2</a></li>
+						        <ul class="list list__pagination">
+				                    <li class="list__item"><a class="list__link" href="#">1</a></li>
+				                    <li class="list__item"><span class="list__link current">2</span></li>
 				                    <li class="list__item"><a class="list__link" href="#">3</a></li>
+				                    <li class="list__item"><a class="list__link" href="#">4</a></li>
+				                    <li class="list__item"><a class="list__link" href="#">5</a></li>
+				                    <li class="list__item"><span class="list__separator">&hellip;</span></li>
+				                    <li class="list__item"><a class="list__link" href="#">17</a></li>
 						        </ul>
 						        
-						        <a href="#" class="link link--pagination"><span class="hidden-text" aria-hidden="true">Next</span><i class="icon icon--right237"></i></a>
+						        <a href="#" class="pagination__control pagination__control--next"><span class="hidden-text" aria-hidden="true">Next</span><i class="icon icon--right237"></i></a>
+						        <a href="#" class="pagination__control pagination__control--last"><span class="hidden-text" aria-hidden="true">Last</span><i class="icon icon--play109"></i></a>
 
 							</div>
+							
 				        <!-- end of code -->
 			        </div>
 
@@ -60,15 +68,23 @@ page-category: "components"
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
 &lt;div class="pagination"&gt;
-&lt;a href="#" class="link link--pagination"&gt;&lt;span class="hidden-text"&gt;Previous&lt;/span&gt;&lt;i class="icon icon--left216"&gt;&lt;/i&gt;&lt;/a&gt;
 
-&lt;ul class="list list--pagination"&gt;
-	&lt;li class="list__item"&gt;&lt;a class="list__link current" href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
-	&lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;2&lt;/a&gt;&lt;/li&gt;
-	&lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;3&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;
-  
-&lt;a href="#" class="link link--pagination"&gt;&lt;span class="hidden-text"&gt;Previous&lt;/span&gt;&lt;i class="icon icon--right237"&gt;&lt;/i&gt;&lt;/a&gt;
+	&lt;a href="#" class="pagination__control pagination__control--first"&gt;&lt;span class="hidden-text" aria-hidden="true"&gt;First&lt;/span&gt;&lt;i class="icon icon--previous14"&gt;&lt;/i&gt;&lt;/a&gt;
+	&lt;a href="#" class="pagination__control pagination__control--previous"&gt;&lt;span class="hidden-text" aria-hidden="true"&gt;Previous&lt;/span&gt;&lt;i class="icon icon--left216"&gt;&lt;/i&gt;&lt;/a&gt;
+        
+    &lt;ul class="list list__pagination"&gt;
+        &lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;span class="list__link current"&gt;2&lt;/span&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;3&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;4&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;5&lt;/a&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;span class="list__separator"&gt;&hellip;&lt;/span&gt;&lt;/li&gt;
+        &lt;li class="list__item"&gt;&lt;a class="list__link" href="#"&gt;17&lt;/a&gt;&lt;/li&gt;
+    &lt;/ul&gt;
+    
+    &lt;a href="#" class="pagination__control pagination__control--next"&gt;&lt;span class="hidden-text" aria-hidden="true"&gt;Next&lt;/span&gt;&lt;i class="icon icon--right237"&gt;&lt;/i&gt;&lt;/a&gt;
+    &lt;a href="#" class="pagination__control pagination__control--last"&gt;&lt;span class="hidden-text" aria-hidden="true"&gt;Last&lt;/span&gt;&lt;i class="icon icon--play109"&gt;&lt;/i&gt;&lt;/a&gt;
+
 &lt;/div&gt;
 			            </code></pre>
 		            </div>
