Google Prettify added
There you go matt!

--- a/assets/less/base/prettify.less
+++ b/assets/less/base/prettify.less
@@ -15,14 +15,14 @@
 @PRETTIFY-Punctuation:          @COLOR-GreyLighter;
 @PRETTIFY-Plaintext:            @COLOR-GreyLighter;
 @PRETTIFY-Tag:                  @COLOR-Pink;
-@PRETTIFY-Attribute:            @COLOR-Lime;
-@PRETTIFY-AttributeValue:       @COLOR-LimeDark;
+@PRETTIFY-Attribute:            @COLOR-LimeDark;
+@PRETTIFY-AttributeValue:       @COLOR-LimeLighter;
 @PRETTIFY-Decimal:              @COLOR-GreyLighter;
 
 .prettyprint {
     display: block;
     color: @COLOR-GreyLighter;
-    background-color: @COLOR-GreyDark;
+    background-color: @COLOR-GreyDarker;
     padding: 1em;
     overflow: hidden;
 
@@ -33,12 +33,12 @@
 
     *::selection {
         color: @COLOR-GreyLighter;
-        background: @COLOR-Yellow;
+        background: @COLOR-PinkDarker;
     }
 
     *::-moz-selection {
         color: @COLOR-GreyLighter;
-        background: @COLOR-Yellow;
+        background: @COLOR-PinkDarker;
     }
 
     .nocode { background-color: none; color: @PRETTIFY-NoCode }
