Lots of changes to accordion functionality.

--- a/content/Components/Tabs.hbs
+++ b/content/Components/Tabs.hbs
@@ -31,7 +31,7 @@ js-tabs: true
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="secton__body">
+		            <div class="section__body">
 				        <!-- code -->
 	        				{{> tabs tabs }}
 
