--- a/assets/less/base_modules/accordion.less
+++ b/assets/less/base_modules/accordion.less
@@ -29,10 +29,31 @@
 	padding: 0.2em;
 }
 
-/* collapsing-section */
-.accordion__content {
-    //display: none;
+.accordion__panel {
+	overflow: hidden;
+} 
+
+.accordion__panel.opening { 
+	-webkit-transition: height linear 0.35s;
+	-moz-transition: height linear 0.35s;
+	-o-transition: height linear 0.35s;
+	transition: height linear 0.35s;
 }
+
+.accordion__panel.closing { 
+	-webkit-transition: height linear 0.35s;
+	-moz-transition: height linear 0.35s;
+	-o-transition: height linear 0.35s;
+	transition: height linear 0.35s;
+}
+
+.accordion__panel.open {
+	height: 100%;
+}
+
+.accordion__panel.closed {
+	height: 0;
+} 
 
 // MOBILE
 // ----------------------------------------------------
