--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -3,13 +3,19 @@
 <script src="{{ assets }}/js/app/conf.js"></script>
 <script data-main="app/main" src="{{ assets }}/js/libs/require/require.js"></script>
 
+{{#if js-accordion}}
+<script type="text/JavaScript">
+	require(["accordion"], function() { });
+</script>
+{{/if}}
+
 {{#if js-tabs}}
 <script type="text/JavaScript">
 	require(["tabs"], function() { });
 </script>
 {{/if}}
 
-{{#dev}}
+{{#dev}} 
 <script src="http://localhost:35730/livereload.js"></script>
 {{/dev}}
 
