--- a/assets/less/modules/list__navigation.less
+++ b/assets/less/modules/list__navigation.less
@@ -18,7 +18,7 @@
 // BASE
 // ----------------------------------------------------
 
-.list__navigation {
+.list__nav {
 	margin: 0;
 	font-family: @NAVIGATION-FontFamily;
     ._clearfix ();
@@ -56,7 +56,7 @@
 
 @media only screen and (max-width: @MQ-Small) {
 
-    .list__navigation {
+    .list__nav {
         .list__link {
             text-align: center;
             ._padding (10);
@@ -70,7 +70,7 @@
 
 @media only screen and (min-width: @MQ-Medium-min) {
 
-    .list__navigation {
+    .list__nav {
         .list__item {
             float: left;
         }
@@ -83,7 +83,7 @@
 
 @media only screen and (min-width: @MQ-Large-min) {
 
-    .list__navigation {
+    .list__nav {
         ._padding (0, 10);
     }
 
