--- a/assets/less/modules/wrap.less
+++ b/assets/less/modules/wrap.less
@@ -19,7 +19,7 @@
 	._padding (20, 10, 0, 10);
 }
 
-.w--navigation {
+.w--nav {
 	background-color: @NAVIGATION-BgColor;
 	z-index: @Z-INDEX-Level5;
 	._depth-2 ();
@@ -33,7 +33,7 @@
 	background-color: lighten(@COLOR-Base, 30%);
 }
 
-.w--copyright {
+.w--copy {
 	color: @COLOR-White;
 	background-color: @COLOR-Base;
 
@@ -60,7 +60,7 @@
 		._depth-2 ();
 	}
 
-	.w--navigation {
+	.w--nav {
         display: none;
         position: fixed;
         top: 44px;
