--- a/content/_partials/ALLOY_copyright.hbs
+++ b/content/_partials/ALLOY_copyright.hbs
@@ -1,4 +1,4 @@
-<div class="w w--copyright">
+<div class="w w--copy">
     <div class="g">
         <div class="c__md--1">
             <div class="copyright" role="contentinfo">&copy; Copyright {{ year }} ALLOY, The ALLOY Team, All rights reserved.</div>
