--- a/content/_partials/ALLOY_list__nav--main.hbs
+++ b/content/_partials/ALLOY_list__nav--main.hbs
@@ -1,4 +1,4 @@
-<ul class="list list__navigation list__navigation--main">
+<ul class="list list__nav list__nav--main">
 	{{#if navigation-main}}
 	    {{#withSort navigation-main "data.navigation-order"}}
 	    	{{#each this.pages}}
