--- a/content/_partials/ALLOY_navigation.hbs
+++ b/content/_partials/ALLOY_navigation.hbs
@@ -1,8 +1,8 @@
-<div class="w w--navigation">
+<div class="w w--nav">
 	<div class="g g--nogutter">
 		<div class="c__lg--1">
 	    	<nav id="navigation" role="navigation" class="drawer">
-		        {{>ALLOY_list__navigation--main}}
+		        {{>ALLOY_list__nav--main}}
 	    	</nav>
 	    </div>
 	</div>
