--- a/assets/less/base_modules/pagination.less
+++ b/assets/less/base_modules/pagination.less
@@ -26,6 +26,7 @@
     vertical-align: top;
     line-height: 1;
     ._font-size (28);
+    ._transition (color, 0.1s);
 }    
 
 .list__pagination {
@@ -49,7 +50,7 @@
         float: left;
         text-decoration: none;
         ._padding (2, 10, 2, 10);
-        ._transition (all, 0.1s);
+        ._transition (background-color, 0.1s);
 
         &:hover {
             background-color: @PAGINATION-BgColorHover;
