Toasts style and data

--- a/assets/less/base_modules/icon.less
+++ b/assets/less/base_modules/icon.less
@@ -19,6 +19,26 @@
     font-style: normal;
 }
 
+.icon {
+    &.xsmall {
+        font-size: 0.5em;
+        line-height: 2;
+    }
+    &.small {
+        font-size: 0.75em;
+        line-height: 1.5;
+    }
+    &.large {
+        font-size: 1.25em;
+        line-height: 0.75;
+
+    }
+    &.xlarge {
+        font-size: 2em;
+        line-height: 0.5;
+    }
+}
+
 [class^="icon--"]:before, [class*=" icon--"]:before,
 [class^="icon--"]:after, [class*=" icon--"]:after {
     font-family: Flaticon;
