--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -25,6 +25,7 @@
 @import "base_modules/box.less";
 @import "base_modules/breadcrumbs.less";
 @import "base_modules/well.less";
+@import "base_modules/toast.less";
 @import "base_modules/image.less";
 
 // MODULES
