--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -211,11 +211,12 @@
 @MODULE-Navigation:             true;
 @MODULE-Overlay:                true;
 @MODULE-Pagination:             true;
+@MODULE-Panel:					true;
 @MODULE-Print:                  true;
+@MODULE-Story:             		true;
+@MODULE-RTE:					true;
 @MODULE-Tabs:                   true;
+@MODULE-Toast:                  true;
 @MODULE-Tooltip:                true;
 @MODULE-Typography:             true;
-@MODULE-Story:             		true;
 @MODULE-Well:                   true;
-@MODULE-RTE:					true;
-@MODULE-Panel:					true;
