--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -34,6 +34,10 @@ page-category: "components"
 				        <!-- code -->
 
 				        {{> toast toast }}
+				        {{> toast toast--info }}
+				        {{> toast toast--warn }}
+				        {{> toast toast--danger }}
+				        {{> toast toast--success }}
 
 				        <!-- end of code -->
 			        </div>
