--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -9,7 +9,7 @@ page-category: "systems"
 
 <main class="w w--main">
 	<div class="g">
-	    <div class="c__lg--1">
+	    <div class="c__lg--5-7">
 
   			<div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
 				<div class="page__head">
@@ -20,11 +20,14 @@ page-category: "systems"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
 		        </div>
 
 <!-- example -->
 	        </div>
+        </div>
+        <div class="c__lg--2-7">
+
+	        {{> panel panel }}
         </div>
     </div>
 </main>
