--- a/content/_partials/toast.hbs
+++ b/content/_partials/toast.hbs
@@ -1,5 +1,10 @@
+
 {{#this}}
-	<div class="toast{{#if item.modifier}} toast--{{item.modifier}}{{/if}}">
-        <span class="toast__content">{{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}{{{content.text}}}</span>
+	<div class="toast{{#if item.modifier}} toast--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}">
+		<a href="#" class="toast__close">&times;</a>
+		<div class="toast__progress"></div>
+		{{#if content.icon}}<div class="toast__icon">{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}</div>{{/if}}
+        <div class="toast__content"> {{{content.text}}}</div>
 	</div>
 {{/this}}
+{{! <div class="toaster" aria-live="polite" role="alert"></div> }}
