--- a/assets/less/base_modules/list.less
+++ b/assets/less/base_modules/list.less
@@ -6,7 +6,9 @@
 // ----------------------------------------------------
 
 .list {
-    
+	list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 // VARIANTS
