--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -8,8 +8,9 @@
 // VARIABLES
 // ----------------------------------------------------
 
-@PANEL-Color:				@COLOR-White;
-@PANEL-BgColor:				@COLOR-Base;
+@PANEL-Color:				   @COLOR-White;
+@PANEL-BgColor:				   @COLOR-Base;
+@PANEL-HeadingsFontFamily:     @TYPE-HeadingsFontFamily;
 
 // BASE
 // ----------------------------------------------------
@@ -24,7 +25,7 @@
 }
 
 .panel__title {
-	font-family: @TYPE-HeadingsFontFamily;
+	font-family: @PANEL-HeadingsFontFamily;
 	._font-size-heading (@TYPE-SIZE-Beta);
 }
 
