--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -144,9 +144,9 @@
 
 @TYPE-FontSize:                 14;
 @TYPE-LineHeight:               24;
-@TYPE-FontFamily:               'Open Sans', Arial, Helvetica, sans-serif;
+@TYPE-FontFamily:               Arial, Helvetica, sans-serif;
 @TYPE-FontColor:                @COLOR-GreyDarker;
-@TYPE-HeadingsFontFamily:       'Playfair Display', serif;
+@TYPE-HeadingsFontFamily:       serif;
 @TYPE-HeadingsColor:            @COLOR-GreyDarker;
 
 @TYPE-SIZE-Omega:               60;
