--- a/content/_partials/form.hbs
+++ b/content/_partials/form.hbs
@@ -1,6 +1,6 @@
 {{#this}}
 
-<form id="id" class="form form--modifier" role="role" method="post">
+<form id="id" class="form form--modifier" role="" method="">
 
 <!-- form__fieldset -->
 <fieldset class="form__fieldset form__fieldset--modifier">
