--- a/assets/less/base_modules/tabs.less
+++ b/assets/less/base_modules/tabs.less
@@ -8,12 +8,12 @@
 // VARIABLES
 // ----------------------------------------------------
 
-@TABS-TrayBgColor:          @COLOR-Blue;
+@TABS-TrayBgColor:          @COLOR-Cyan;
 @TABS-Color:                @COLOR-White;
-@TABS-BgColor:              @COLOR-Blue;
-@TABS-HoverColor:           @TYPE-FontColor;
-@TABS-HoverBgColor:         @COLOR-White;
-@TABS-ActiveColor:          @TABS-HoverColor;
+@TABS-BgColor:              @COLOR-Cyan;
+@TABS-HoverColor:           @COLOR-White;
+@TABS-HoverBgColor:         darken(@TABS-BgColor, 10%);
+@TABS-ActiveColor:          @TYPE-FontColor;
 @TABS-ActiveBgColor:        @COLOR-White;
 
 // BASE
