--- a/assets/less/modules/ALLOY.less
+++ b/assets/less/modules/ALLOY.less
@@ -20,6 +20,28 @@
 	._font-size (12);
 }
 
+.button__totop {
+    color: @COLOR-White;
+    background-color: @COLOR-Cyan;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    line-height: 1;
+    z-index: @Z-INDEX-Level1;
+    ._padding (7);
+    ._font-size (30);
+    ._depth-4();
+    ._transition (background-color, 0.1s);
+    
+    &:hover {
+        color: @COLOR-White;
+        background-color: darken(@COLOR-Cyan, 10%);
+        ._depth-4();
+    }
+}
+
 // MOBILE
 // ----------------------------------------------------
 
