--- a/content/_partials/button.hbs
+++ b/content/_partials/button.hbs
@@ -6,6 +6,7 @@
         class="button
             {{#if item.modifier}} button--{{item.modifier}}{{/if}}
             {{#if item.disabled}} disabled{{/if}}
+            {{#if item.status}} {{item.status}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}
             {{#if item.block}} block{{/if}}"
         {{#if content.title}} title="{{content.title}}"{{/if}}>
