More Depth references

--- a/content/Systems/depth.hbs
+++ b/content/Systems/depth.hbs
@@ -21,7 +21,7 @@ class-master: "depth"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
+		        <p>These examples show the visual depth levels described in Material Design.</p>
 		        </div>
 
 <!-- example -->
@@ -71,6 +71,7 @@ class-master: "depth"
 
 		            	<ul>
 		            		<li><a href="https://www.polymer-project.org/0.5/docs/elements/paper-shadow.html" target="_blank">https://www.polymer-project.org/0.5/docs/elements/paper-shadow.html</a></li>
+		            		<li><a href="http://codepen.io/p2kmgcl/pen/JoRaPm">http://codepen.io/p2kmgcl/pen/JoRaPm</a></li>
 		            	</ul>
 		            	
 		            </div>
