--- a/content/Components/wells.hbs
+++ b/content/Components/wells.hbs
@@ -34,6 +34,10 @@ page-category: "components"
 				        <!-- code -->
 
 				        {{> well well }}
+				        {{> well well--info }}
+				        {{> well well--warn }}
+				        {{> well well--danger }}
+				        {{> well well--success }}
 
 				        <!-- end of code -->
 			        </div>
