Added image variants to article

--- a/assets/less/base/typography.less
+++ b/assets/less/base/typography.less
@@ -74,7 +74,8 @@ strong {
 }
 
 blockquote {
-    ._margin (0, 0, @TYPE-LineHeight, @TYPE-LineHeight);
+    ._padding (0, 0, 0, @TYPE-LineHeight);
+    ._margin (0, 0, @TYPE-LineHeight, 0);
 }
 
 dfn {
