--- a/assets/less/fontloader.less
+++ b/assets/less/fontloader.less
@@ -76,7 +76,7 @@
 	h6,
 	blockquote,
 	.panel__title,
-	.list__navigation,
+	.list__nav,
 	.table__header {
 		font-family: @FONTLOADER-HeadingsFontFamily;
 	}
