--- a/assets/less/base_modules/accordion.less
+++ b/assets/less/base_modules/accordion.less
@@ -30,7 +30,7 @@
 	background-color: @ACCORDION-TitleBgColor;
   	text-decoration: none;
   	display: block;
-	._padding (10);
+	._padding (@TYPE-LineHeight/2);
 
   	&:link,
   	&:visited {
@@ -48,7 +48,7 @@
 }
 
 .accordion__body {
-	._padding (10);
+	._padding (@TYPE-LineHeight/2);
 }
 
 .accordion__panel.opening { 
@@ -60,7 +60,7 @@
 }
 
 .accordion__panel.open {
-	height: 100%;
+    height: 100%;
 }
 
 .accordion__panel.closed {
