--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -19,7 +19,7 @@
 	color: @PANEL-Color;
 	background-color: @PANEL-BgColor;
 	background-clip: padding-box;
-	._padding (20);
+	._padding (@TYPE-LineHeight);
 	._border-radius (2);
 	._depth-1 ();
 }
@@ -34,9 +34,9 @@
 }
 
 .panel__actions {
-	border-top: 1px solid lighten(@PANEL-BgColor, 5);
-	._margin-top (15);
-	._padding-top (20);
+	border-top: 1px solid lighten(@PANEL-BgColor, 10%);
+	._margin-top (@TYPE-LineHeight);
+	._padding-top (@TYPE-LineHeight);
 }
 
 } .panel-styles();
