--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -6,6 +6,13 @@
 // =========================================================================*/
 
 .rte {
+    .left {
+        ._margin (0, @TYPE-LineHeight, @TYPE-LineHeight, 0);
+    }
+
+    .right {
+        ._margin (0, 0, @TYPE-LineHeight, @TYPE-LineHeight);
+    }
     
     ol,
     ul {
@@ -14,7 +21,7 @@
 
         ol,
         ul  {
-            ._margin (10, 0);
+            ._margin (@TYPE-LineHeight/2, 0);
         }
 
         &:first-child {
@@ -45,18 +52,15 @@
     }
 
     blockquote {
-        color: @COLOR-YellowDarker;
-        background-color: @COLOR-YellowLighter;
-        font-family: @TYPE-HeadingsFontFamily;
-        ._padding (@TYPE-LineHeight);
-        ._margin (@TYPE-LineHeight, 0);
-        ._border-radius (2);
-        ._font-size (@TYPE-SIZE-Epsilon);
-        ._depth-1 ();
+        border-left: 5px solid @COLOR-GreyLight;
+        font-style: italic;
+        ._font-size (@TYPE-SIZE-Gamma);
 
         cite {
-            font-family: @TYPE-FontFamily;
-            ._font-size (@TYPE-FontSize);
+            display: block;
+            font-style: normal;
+            text-align: right;
+            ._font-size (@TYPE-SIZE-Iota);
         }
     }
 
@@ -66,6 +70,23 @@
     dd {}
     dt {}
     
+}
+
+// MOBILE
+// ----------------------------------------------------
+
+@media only screen and (max-width: @MQ-Small) {
+
+    .rte {
+        .left,
+        .right {
+            float: none;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
 }
 
 } .rte-styles();
