--- a/assets/less/base_modules/well.less
+++ b/assets/less/base_modules/well.less
@@ -21,8 +21,8 @@
 .well {
     background-color: @WELL-BgColor;
     display: block;
-    ._padding (@TYPE-FontSize);
-    ._margin (0, 0, @TYPE-LineHeight, @TYPE-LineHeight);
+    ._padding (@TYPE-LineHeight/2, @TYPE-FontSize);
+    ._margin (@TYPE-LineHeight, 0, @TYPE-LineHeight, 0);
     ._border-radius ();
 }
 
@@ -43,6 +43,21 @@
 	&.success {
 	    background-color: @WELL-SuccessBgColor;
 	}
+    &.xsmall {
+        ._font-size(@TYPE-SIZE-Iota - 2);
+        ._padding (@TYPE-LineHeight/4, @TYPE-FontSize);
+    }
+    &.small {
+        ._font-size(@TYPE-SIZE-Iota);
+        ._padding (@TYPE-LineHeight/3, @TYPE-FontSize);
+    }
+    &.large {
+        ._font-size(@TYPE-SIZE-Delta);
+        ._padding (@TYPE-LineHeight*0.75, @TYPE-FontSize);}
+    &.xlarge {
+        ._font-size(@TYPE-SIZE-Gamma);
+        ._padding (@TYPE-LineHeight, @TYPE-FontSize);}
+
 }
 
 } .well-styles();
