--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -35,7 +35,7 @@
 @import "base_modules/story.less";
 @import "base_modules/table.less";
 @import "base_modules/tabs.less";
-//@import "base_modules/tooltip.less";
+@import "base_modules/tooltip.less";
 @import "base_modules/well.less";
 @import "base_modules/toast.less";
 @import "base_modules/image.less";
