--- a/content/Components/tooltip.hbs
+++ b/content/Components/tooltip.hbs
@@ -33,6 +33,9 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 
+				        <p><a href="#" data-tooltip="Tooltip">Tooltip</a></p>
+				        <p><a href="#" data-tooltip="This is a large tooltip" class="tooltip-large">Tooltip Large</a></p>
+
 				        <!-- end of code -->
 			        </div>
 
