--- a/content/_partials/toast.hbs
+++ b/content/_partials/toast.hbs
@@ -4,7 +4,7 @@
 		<a href="#" class="toast__close">&times;</a>
 		<div class="toast__progress"></div>
 		{{#if content.icon}}<div class="toast__icon">{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}</div>{{/if}}
-        <div class="toast__content"> {{{content.text}}}</div>
+        <div class="toast__content">{{content.text}}</div>
 	</div>
 {{/this}}
 {{! <div class="toaster" aria-live="polite" role="alert"></div> }}
