--- a/content/Components/button.hbs
+++ b/content/Components/button.hbs
@@ -101,9 +101,9 @@ page-category: "components"
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
 &lt;a href="#linkurl1" class="button" title="Default"&gt;
-	&lt;span class="ripple">&lt;/span&gt;
+	&lt;span class="ripple"&gt;&lt;/span&gt;
 	&lt;span class="button__content"&gt;&lt;i class="icon icon--icon-1" aria-hidden="true" role="img"&gt;&lt;/i&gt;Default Button&lt;/span&gt;
-&lt;/a>
+&lt;/a&gt;
 			             </code></pre>
 		            </div>
 
