--- a/content/Components/toast.hbs
+++ b/content/Components/toast.hbs
@@ -34,6 +34,16 @@ page-category: "components"
 				        <!-- code -->
 
 				        {{> toast toast }}
+			        </div>
+
+		        </section>
+
+<!-- example -->
+
+		    	<section class="section section--code">
+		            <header class="section__head">
+		            	<h2 class="section__title">Example: Status</h2>
+		            </header>
 				        {{> toast toast--info }}
 				        {{> toast toast--warn }}
 				        {{> toast toast--danger }}
@@ -53,7 +63,13 @@ page-category: "components"
 
 		            <div class="section__body">
 			            <pre class="prettyprint linenums"><code class="html">
-
+&lt;div class="toast danger"&gt;
+	&lt;a href="#" class="toast__close"&gt;&amp;times;&lt;/a&gt;
+	&lt;div class="toast__progress">&lt;/div&gt;
+	&lt;div class="toast__icon"&gt;&lt;i class="icon icon--tick7 xlarge" aria-hidden="true" role="img"&gt;&lt;/i&gt;
+&lt;/div&gt;
+    &lt;div class="toast__content"&gt;Its all going wrong - WE ARE ALL DOOMED!!&lt;/div&gt;
+&lt;/div&gt;
 			             </code></pre>
 		            </div>
 
